chore: apply suggested changes given at #1185